# multimodality

./: .gitignore  README.md  main.py  pyproject.toml
src/multimodality/: __init__.py  core.py
